# parser_hh-FastAPI

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  mypy_validate.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml
src/: api.py  basemodels.py  config.py  exceptions.py  main.py
src/alembic/versions/: 007be10c13ba_добавлена_модель_vacancy.py  7b52c6ce6640_добавлена_модель_users.py  e00bf3593210_добавлена_поле_hh_link_в_модель_vacancy.py
src/auth/: auth.py  helpers.py  schemas.py  utils.py  validation.py
src/certs/: jwt-private.pem  jwt-public.pem  server.crt  server.key
src/database/: __init__.py  database.py  managers.py  models.py
src/parse_hh/: __init__.py  areas.json  areas_index.py  dependencies.py  helpers.py  metro.json  metro_index.py  parse_hh.py
src/templates/: about_us.html  authenticated.html  base.html  index.html  login.html  register.html  router.py
tests/: test_main.py
